--- a/Museo/templates/base.html
+++ b/Museo/templates/base.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
 <html>
     <head>
+
+        {% load static %}
+
+
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title> {% block title %} Title {% endblock %} </title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="{% static 'Museo/base.css'%}">
     </head>
     <body>
-        <div class="undertext"> 
-            <nav> 
-                <ul> 
-                   <li class="navbar">  <a href="{% url 'home' %}">Home </a> </li>
-                   <li class="navbar"> <a href="{% url 'services' %}">Services </a> </li> 
-                   <li class="navbar"> <a href="{% url 'catalog' %}">Catalog </a> </li>
-                   <li class="navbar"> <a href="contact">Contact </a> </li> 
-                </ul>
-            </nav>         
-        </div>
+
+
+
+
+        <div class="header"> <font style = "margin-right: 10%;">Museo</font> </div>        
         
-        <section> {% block info %} {% endblock %} </section>
+        
+        <nav class="nav-style"> 
+            <div> 
+                <a href="{% url 'home' %}">Home </a>
+                <a href="{% url 'services' %}">Services </a>
+                <a href="{% url 'catalog' %}">Catalog </a>
+                <a href="{% url 'contact' %}">Contact </a>
+                <a href="{% url 'docs' %}">Documentation </a>
+            </div>
+        </nav>
+        
+        <section> 
+            {% block info %} 
+
+            {% endblock %} 
+        </section>
         
         <footer> 
-        <a href="mailto:amozon1113@gmail.com"> museo.ba@nauta.cu </a>
+        <a href="mailto:franciscoayracaceress@gmail.com"> museo.ba@nauta.cu </a>
 
         </footer>
         
